app/styles/components/footer.scss
footer {

	background-repeat:no-repeat;
	background-size:742px 429px;
	background-position:880px 50px;
	border-top:1px solid var(--border-color);

	content {

		@include media(max-width-1200) {
			width: 872px;
		}

		@include media(max-width-1024) {
			width: 85%;
		}

		> upper {

			display:flex;
			flex-direction:row;
			padding:100px 0 0 0;
			align-items:flex-start;
			justify-content:space-between;

			> div {

				width:50%;
				display:flex;
				flex-shrink:0;
				align-items:flex-start;
				justify-content:space-between;

				@include media(max-width-768) {
					width:100%;
				}

				&:nth-child(1) {
					padding-right: 50px;
					flex-direction: column;
					@include media(max-width-1024) {
						padding-right: 0;
						padding-bottom: 30px;
					}
				}

				&:nth-child(2) {
					padding-left: 50px;
					flex-direction: row;
					@include media(max-width-1024) {
						padding-left: 0;
						padding-top: 30px;
					}
				}

				.logo {
					width:300px;
					height:40px;
					display:block;
					margin-bottom: 30px;
					background-repeat:no-repeat;
					background-image:url("/static/img/logo.svg");
				}

				> div {
					width: 50%;
					display: flex;
					flex-shrink: 0;
					flex-direction: column;
				}

				h4 {
					font-size:20px;
					margin-bottom:30px;
					color:var(--text-color);
				}

				p {
					font-size:14px;
					margin-bottom:30px;
					color:var(--text-color);
				}

				a {
					font-size:14px;
					color:var(--faint-color);
				}

				i {
					cursor:pointer;
					font-size:22px;
					margin:0 5px 0 0;
					transition:color 0.3s;
					color:var(--faint-color);
				}

			}

		}

		> lower {

			display:flex;
			align-items:center;
			flex-direction:row;
			padding:0 0 100px 0;
			justify-content:space-between;
			border-top:1px solid var(--border-color);

			p {
				font-size:12px;
				margin-top:30px;
				color:var(--faint-color);
			}

		}

	}

}

